# REtina

./: .gitignore  README.md  ics.py  preprocessing.py  pyproject.toml
REtina/calibration_data/: H_mtx.npy  phantom_ocs.npy
REtina/src/: calibrate.py  models.py  n2i2d.py  preprocess.py  recon.py
data/: H_mtx_negative.npy  H_mtx_positive.npy  Hmat.npy  phantom_ICS.npy  phantom_OCS.npy  phantom_ics.npy
src/: argmin.py  calibration.py  camera_matrix.py  homography.py  ics.py  image_coordinate_system.py  preprocessing.py
